--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     padding: 1rem 0.3rem;
 }
 .imgWrapper{
@@ -47,4 +48,15 @@
 .inputsInfo input{
     padding: 0.5rem 2rem;
     border-radius: 10px;
+}
+.delBtn{
+    width: 200px;
+    margin-top: 10px;
+    border-radius: 10px;
+    padding: 0.5rem 2rem;
+    font-weight: 600;
+    color: white;
+    background-color: brown;
+    text-align: center;
+    cursor: pointer;
 }
